added ambiance and SEO

--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -13,6 +13,10 @@
     <%= f.text_field :title %>
 </p>
 <p>
+    <%= f.label :restaurant %>
+    <%= f.text_field :restaurant %>
+</p>
+<p>
     <%= f.label :body %>
     <%= f.text_area :body %>
 </p>
@@ -20,6 +24,10 @@
     <%= f.label :score %>
     <%= f.number_field :score %>
 </p>
-<%= f.submit %>
+<p>
+    <%= f.label :ambiance %>
+    <%= f.text_field :ambiance %>
+</p>
+<%= f.submit "Save review" %>
 
 <% end %>
