--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -20,6 +20,17 @@
     <%= f.label :body %>
     <%= f.text_area :body %>
 </p>
+
+<p>
+    <%= f.label :cusisine %>
+    <%= f.text_field :cusisine %>
+</p>
+
+<p>
+    <%= f.label :price %>
+    <%= f.number_field :price %>
+</p>
+
 <p>
     <%= f.label :score %>
     <%= f.number_field :score %>
