--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -12,6 +12,20 @@
     Ambiance: <%= @review.ambiance %>
 </div>
 <% end %>
+
+<% if @review.price.present? %>
+<div class="price">
+    Price: <%= @review.price %>
+</div>
+<% end %>
+
+<% if @review.cusisine.present? %>
+<div class="cuisine">
+    Cuisine: <%= @review.cusisine %>
+</div>
+<% end %>
+
+
 <div class="body"> 
     <%= simple_format @review.body %>
 </div>
