--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -1,3 +1,15 @@
+<% content_for :page_title, "Homepage" %>
+
+<nav class="filters">
+ <%= link_to "All prices", root_path %>
+ <%= link_to "$", root_path(price: 1, cusisine: @cusisine)%>
+ <%= link_to "$$", root_path(price: 2, cusisine: @cusisine)%>
+ <%= link_to "$$$", root_path(price: 3, cusisine: @cusisine)%>
+
+ <%= link_to "Italian", root_path(cusisine: "Italian", price: @price) %>
+ <%= link_to "English", root_path(cusisine: "English", price: @price) %>
+</nav>
+
 <% @reviews.each do |review| %>
     
     <div class="review">
